Correção nos botões,

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                             <div class="card-body">
                                 <h3 class="card-title">Restaurantes</h3>
                                 <p class="card-text">Descubra pratos deliciosos dos melhores restaurantes da cidade.</p>
-                                <a href="#" class="btn btn-primary custom-btn-red">Ver Cardápio</a>
+                                <a href="#" class="btn custom-btn-red">Ver Cardápio</a>
                             </div>
                         </div>
                     </div>
@@ -116,7 +116,7 @@
                             <div class="card-body">
                                 <h3 class="card-title">Mercado</h3>
                                 <p class="card-text">Compre seus produtos de mercado favoritos e receba em casa.</p>
-                                <a href="#" class="btn btn-primary custom-btn-red">Ver Produtos</a>
+                                <a href="#" class="btn custom-btn-red">Ver Produtos</a>
                             </div>
                         </div>
                     </div>
@@ -127,7 +127,7 @@
                             <div class="card-body">
                                 <h3 class="card-title">Farmácia</h3>
                                 <p class="card-text">Medicamentos e produtos de saúde entregues onde você estiver.</p>
-                                <a href="#" class="btn btn-primary custom-btn-red">Ver Produtos</a>
+                                <a href="#" class="btn custom-btn-red">Ver Produtos</a>
                             </div>
                         </div>
                     </div>
@@ -138,7 +138,7 @@
                             <div class="card-body">
                                 <h3 class="card-title">Pet</h3>
                                 <p class="card-text">Tudo o que seu pet precisa com entrega rápida e segura.</p>
-                                <a href="#" class="btn btn-primary custom-btn-red">Ver Produtos</a>
+                                <a href="#" class="btn custom-btn-red">Ver Produtos</a>
                             </div>
                         </div>
                     </div>
@@ -149,7 +149,7 @@
                             <div class="card-body">
                                 <h3 class="card-title">Bebidas</h3>
                                 <p class="card-text">Bebidas geladas e refrescantes para todas as ocasiões.</p>
-                                <a href="#" class="btn btn-primary custom-btn-red">Ver Bebidas</a>
+                                <a href="#" class="btn custom-btn-red">Ver Bebidas</a>
                             </div>
                         </div>
                     </div>
@@ -304,7 +304,7 @@
         
                         <div class="mb-3">
                             <label for="email" class="form-label" title="Digite seu endereço de e-mail.">E-mail:</label>
-                            <input type="email" id="email" name "email" class="form-control" required title="Digite seu endereço de e-mail.">
+                            <input type="email" id="email" name="email" class="form-control" required title="Digite seu endereço de e-mail.">
                             <div class="invalid-feedback">
                                 Por favor, insira um endereço de e-mail válido.
                             </div>
@@ -349,7 +349,7 @@
                         </div>
                     </fieldset>
         
-                    <button type="submit" class="btn btn-primary custom-btn-red">Enviar</button>
+                    <button type="submit" class="btn custom-btn-red">Enviar</button>
                 </form>
             </div>
         </section>
