Adicionado interatividade com Javacript - Modal Cupom de desconto e Cookie

--- a/index.html
+++ b/index.html
@@ -238,8 +238,8 @@
 
         <!-- TABELA DOS RESTAURANTES -->
 
-        <section class="container-fluid">
-            <h2 id="restaurante" class="text-center mt-5 mb-5 title-custom-table animated-border-bottom">Tabela de Restaurantes
+        <section class="container-fluid card">
+            <h2 id="restaurante" class="text-center mt-5 mb-5 title-custom-table animated-border-bottom ">Tabela de Restaurantes
                 Classificados </h2>
             <div class="container-fluid text-center">
                 <i class="fas fa-star star-yellow"></i>
@@ -362,7 +362,7 @@
                 <div class="card-rating">
                     <i class="fas fa-star star-yellow"></i>
                     <i class="fas fa-star star-yellow"></i>
-                    <i class "fas fa-star star-yellow"></i>
+                    <i class="fas fa-star star-yellow"></i>
                     <i class="fas fa-star star-yellow"></i>
                     <i class="fas fa-star star-yellow"></i>
                 </div>
@@ -457,7 +457,7 @@
         <div class="card mb-4">
             <div class="card-body">
                 <h5 class="card-title">Paula L.</h5>
-                <div class "card-rating">
+                <div class="card-rating">
                     <i class="fas fa-star star-yellow"></i>
                     <i class="fas fa-star star-yellow"></i>
                     <i class="fas fa-star star-yellow"></i>
@@ -620,7 +620,20 @@
     
 
 
+    <!-- Banner de Cookies de Mentirinha -->
+<div id="cookieBanner" class="cookie-banner">
+    Este site utiliza cookies fictícios para melhorar sua experiência. <a href="#" id="acceptCookies">Aceitar</a>
+</div>
 
+<!-- CUPOM DE DESCONTO -->
+<div id="cupom-popup" class="cupom-popup">
+    <i class="fas fa-ticket"></i>
+    <p>Desconto de 10% na sua próxima refeição! Use o código: DELICIA10</p>
+</div>
+
+
+
+    
 
     <!-- Script -->
     <script src="script.js"></script>
