Adicionando animação com JS

--- a/index.html
+++ b/index.html
@@ -95,6 +95,10 @@
     <div id="content-between">
         <section id="catalog ">
             <div class="container">
+                <div class="container text-center">
+                    <span class="typed-text"></span>
+                    <span class="cursor">|</span>
+                </div>
                 <h2 id="menu" class="text-center mt-5 mb-5 animated-title title animated-border-bottom">
                     Catálogo Digital
                 </h2>
@@ -356,7 +360,6 @@
         <section class="container mt-5 mb-5">
             <h2 class="text-center title-custom-red">Depoimentos e Avaliações</h2>
 
-            <!-- Depoimentos de Clientes -->
             <!-- Depoimentos de Clientes -->
             <div class="row mt-4">
                 <div class="col-md-4">
